--- a/app/src/main/res/layout/activity_add_persona.xml
+++ b/app/src/main/res/layout/activity_add_persona.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/BoldText"
             android:textColor="@color/fontBColor"
-            android:text="신규 페르소나"
+            android:text="@string/newPersona"
             android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
     <TextView
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginStart="20dp"
-        android:text="이름"
+        android:text="@string/name"
         android:textAppearance="@style/BoldText"
         android:textColor="@color/fontBColor"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginTop="6dp"
         android:layout_marginHorizontal="20dp"
         android:textAppearance="@style/BoldText"
-        android:hint="최대 10글자"
+        android:hint="@string/maxCharacters"
         android:backgroundTint="@color/disableColor"
         android:textCursorDrawable="@drawable/et_name_cursor"
         android:textColorHint="@color/disableColor"
@@ -75,21 +75,24 @@
                 android:id="@+id/tv_sex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="성별"
+                android:text="@string/sex"
                 android:textAppearance="@style/BoldText"
                 android:textColor="@color/fontBColor"
                 app:layout_constraintStart_toStartOf="@+id/tv_name"
                 app:layout_constraintTop_toBottomOf="@+id/et_name" />
             <RadioGroup
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginEnd="10dp"
+                android:weightSum="2">
                 <RadioButton
                     android:checked="true"
                     android:id="@+id/rb_male"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@drawable/select_left_bg"
                     android:textColor="@drawable/select_sex_text"
                     android:textAlignment="center"
@@ -97,12 +100,13 @@
                     android:button="@null"
                     android:textAppearance="@style/BoldText"
                     android:textSize="16sp"
-                    android:text="남자" />
+                    android:text="@string/male" />
 
                 <RadioButton
                     android:id="@+id/rb_female"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@drawable/select_right_bg"
                     android:textColor="@drawable/select_sex_text"
                     android:textAlignment="center"
@@ -110,7 +114,7 @@
                     android:button="@null"
                     android:textAppearance="@style/BoldText"
                     android:textSize="16sp"
-                    android:text="여자" />
+                    android:text="@string/female" />
             </RadioGroup>
         </LinearLayout>
 
@@ -123,7 +127,7 @@
                 android:id="@+id/tv_personality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="성격유형"
+                android:text="@string/personality"
                 android:textAppearance="@style/BoldText"
                 android:textColor="@color/fontBColor"/>
             <LinearLayout
