--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             app:contentScrim="@color/bgColor"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="나의 페르소나"
+            app:title="@string/myPersona"
             app:collapsedTitleGravity="center_horizontal"
             app:expandedTitleGravity="top|center_horizontal"
             app:collapsedTitleTextAppearance="@style/CollapsedTextAppearance"
@@ -27,20 +27,21 @@
             <LinearLayout
                 android:id="@+id/ll_totalPersona"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:background="@drawable/total_personas"
                 android:weightSum="7"
-                android:paddingHorizontal="20dp">
+                android:paddingHorizontal="20dp"
+                android:paddingBottom="30dp">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="나의 페르소나"
+                        android:text="@string/myPersona"
                         android:textAppearance="@style/RegularText"
                         android:layout_marginTop="60dp"/>
                     <LinearLayout
@@ -51,86 +52,120 @@
                             android:id="@+id/tv_totalNumber"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0"
+                            tools:text="0"
                             android:textSize="34sp"
                             android:textAppearance="@style/BoldText"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=" 명"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/num"
                             android:textAppearance="@style/RegularText"/>
                     </LinearLayout>
                 </LinearLayout>
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_summary"
-                    android:layout_width="150dp"
-                    android:layout_height="160dp"
-                    android:layout_weight="5"
-                    android:layout_gravity="center|top"
-                    android:layout_marginTop="60dp"
-                    app:cardCornerRadius="10dp">
-                    <LinearLayout
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:orientation="vertical"
+                    android:layout_marginTop="60dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/BoldText"
+                        android:text="@string/suitMe"/>
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cv_summary"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_margin="10dp"
-                        android:weightSum="2">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        app:cardCornerRadius="10dp">
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-                            <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginVertical="6dp"
+                            android:layout_marginHorizontal="20dp">
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textAppearance="@style/BoldText"
-                                android:textSize="16sp"
-                                android:text="제일 많아요"/>
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp">
+                                <TextView
+                                    android:id="@+id/tv_goodType1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="28sp"
+                                    tools:text="ISTJ-A/T"/>
+                                <TextView
+                                    android:id="@+id/tv_num1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:layout_marginStart="5dp"
+                                    tools:text="5"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:text="@string/num"/>
+                            </LinearLayout>
                             <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:weightSum="3"
-                                android:orientation="vertical">
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp">
+                                <TextView
+                                    android:id="@+id/tv_goodType2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="28sp"
+                                    tools:text="ISTJ-A/T"/>
+                                <TextView
+                                    android:id="@+id/tv_num2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:layout_marginStart="5dp"
+                                    tools:text="5"/>
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textAppearance="@style/BoldText"
-                                    android:layout_weight="1"
-                                    android:gravity="center"
-                                    android:textSize="16sp"
-                                    android:text="100명 ESHF"/>
+                                    android:text="@string/num"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp">
                                 <TextView
+                                    android:id="@+id/tv_goodType3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textAppearance="@style/BoldText"
-                                    android:layout_weight="1"
-                                    android:gravity="center"
-                                    android:textSize="16sp"
-                                    android:text="100명 ESHF"/>
+                                    android:textSize="28sp"
+                                    tools:text="ISTJ-A/T"/>
                                 <TextView
+                                    android:id="@+id/tv_num3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textAppearance="@style/BoldText"
-                                    android:layout_weight="1"
-                                    android:gravity="center"
-                                    android:textSize="16sp"
-                                    android:text="100명 ESHF"/>
+                                    android:layout_marginStart="5dp"
+                                    tools:text="5"/>
+                                <TextView
+                                    android:id="@+id/tv_num"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:text="@string/num"/>
                             </LinearLayout>
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="@style/BoldText"
-                                android:textSize="16sp"
-                                android:text="제일 적어요"/>
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
             </LinearLayout>
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -151,6 +186,7 @@
             android:id="@+id/rv_type"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
             android:overScrollMode="never"
             android:paddingTop="20dp"
             android:paddingHorizontal="15dp"/>
