--- a/app/src/main/res/layout/activity_personality_type.xml
+++ b/app/src/main/res/layout/activity_personality_type.xml
@@ -22,34 +22,260 @@
             <LinearLayout
                 android:id="@+id/ll_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingHorizontal="20dp">
+                android:paddingTop="60dp"
+                android:paddingHorizontal="20dp"
+                android:paddingBottom="30dp">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="60dp">
-                    <TextView
-                        android:layout_width="wrap_content"
+                    android:weightSum="7">
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="나와 "
-                        android:textAppearance="@style/RegularText"/>
-                    <TextView
-                        android:id="@+id/tv_relation"
-                        android:layout_width="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_weight="3">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/tv_relation"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="무난한"
+                                android:textAppearance="@style/BoldText"/>
+                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/tv_personality"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="ENTJ-A/T"
+                            android:textSize="34sp"
+                            android:textAppearance="@style/BoldText"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        tools:text="무난한"
-                        android:textAppearance="@style/BoldText"/>
+                        android:layout_weight="4"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_keyword"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="@style/RegularText"
+                            android:text="@string/keyword"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:weightSum="2"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="7dp">
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_weight="1">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    android:text="# "/>
+                                <TextView
+                                    android:id="@+id/tv_key1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    tools:text="직관적"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_weight="1"
+                                >
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    android:text="# "/>
+                                <TextView
+                                    android:id="@+id/tv_key2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    tools:text="직관적"/>
+                            </LinearLayout>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:weightSum="2"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="7dp">
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_weight="1"
+                                >
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    android:text="# "/>
+                                <TextView
+                                    android:id="@+id/tv_key3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    tools:text="직관적"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_weight="1"
+                                >
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    android:text="# "/>
+                                <TextView
+                                    android:id="@+id/tv_key4"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:textSize="16sp"
+                                    tools:text="직관적"/>
+                            </LinearLayout>
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
                 <TextView
-                    android:id="@+id/tv_personality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="ENTJ-A/T"
-                    android:textSize="34sp"
-                    android:textAppearance="@style/BoldText"/>
+                    android:textAppearance="@style/RegularText"
+                    android:text="@string/goodType"
+                    android:layout_marginTop="20dp"/>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_goodType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    app:cardCornerRadius="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginVertical="6dp"
+                        android:layout_marginHorizontal="10dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="2">
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/tv_goodType1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:text="ISTJ-A/T"/>
+                                <TextView
+                                    android:id="@+id/tv_num1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/RegularText"
+                                    android:layout_marginStart="5dp"
+                                    tools:text="5"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/RegularText"
+                                    android:text="@string/num"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/tv_goodType2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/BoldText"
+                                    android:text="ISTJ-A/T"/>
+                                <TextView
+                                    android:id="@+id/tv_num2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/RegularText"
+                                    android:layout_marginStart="5dp"
+                                    tools:text="5"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="@style/RegularText"
+                                    android:text="@string/num"/>
+                            </LinearLayout>
+                        </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:layout_marginTop="6dp">
+                            <TextView
+                                android:id="@+id/tv_goodType3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAppearance="@style/BoldText"
+                                android:text="ISTJ-A/T"/>
+                            <TextView
+                                android:id="@+id/tv_num3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAppearance="@style/RegularText"
+                                android:layout_marginStart="5dp"
+                                tools:text="5"/>
+                            <TextView
+                                android:id="@+id/tv_number"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textAppearance="@style/RegularText"
+                                android:text="@string/num"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
+
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -80,21 +306,22 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/BoldText"
                     android:textColor="@color/fontBColor"
-                    android:text="총 "/>
+                    android:text="@string/total"/>
                 <TextView
                     android:id="@+id/tv_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/BoldText"
                     android:textColor="@color/fontBColor"
-                    android:text="0"/>
+                    android:layout_marginStart="5dp"
+                    tools:text="0"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/BoldText"
                     android:textColor="@color/fontBColor"
                     android:layout_marginStart="2dp"
-                    android:text="명"/>
+                    android:text="@string/num"/>
             </LinearLayout>
 
             <LinearLayout
@@ -107,21 +334,22 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
-                    android:text="남자 "/>
+                    android:text="@string/male"/>
                 <TextView
                     android:id="@+id/tv_totalMale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
-                    android:text="0"/>
+                    android:layout_marginStart="5dp"
+                    tools:text="0"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
                     android:layout_marginStart="2dp"
-                    android:text="명"/>
+                    android:text="@string/num"/>
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_male"
@@ -140,21 +368,22 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
-                    android:text="여자 "/>
+                    android:text="@string/female"/>
                 <TextView
                     android:id="@+id/tv_totalFemale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
-                    android:text="0"/>
+                    android:layout_marginStart="5dp"
+                    tools:text="0"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/RegularText"
                     android:textColor="@color/fontBColor"
                     android:layout_marginStart="2dp"
-                    android:text="명"/>
+                    android:text="@string/num"/>
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_female"
