--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -15,7 +15,7 @@
         android:textAppearance="@style/RegularText"
         android:textColor="@color/fontBColor"
         android:textSize="16sp"
-        android:text="수정할까요?" />
+        android:text="@string/editPersona" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,8 +33,7 @@
             android:textSize="16sp"
             android:textAppearance="@style/BoldText"
             android:textColor="@color/fontBColor"
-            android:text="취소" />
-
+            android:text="@string/cancel" />
         <TextView
             android:id="@+id/tv_edit"
             android:layout_gravity="center"
@@ -46,6 +45,6 @@
             android:textAppearance="@style/BoldText"
             android:textColor="@color/fontBColor"
             android:textSize="16sp"
-            android:text="수정" />
+            android:text="@string/edit" />
     </LinearLayout>
 </LinearLayout>
