--- a/app/src/main/res/layout/type_widget.xml
+++ b/app/src/main/res/layout/type_widget.xml
@@ -52,7 +52,8 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="@style/RegularText"
                         android:textSize="16sp"
-                        android:text=" 명" />
+                        android:layout_marginStart="5dp"
+                        android:text="@string/num" />
                 </LinearLayout>
 
             </LinearLayout>
