--- a/app/src/main/res/menu/add_tool_bar_menu.xml
+++ b/app/src/main/res/menu/add_tool_bar_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/tb_add"
-        android:title="추가"
+        android:title="@string/add"
         app:showAsAction="ifRoom"/>
 </menu>
