--- a/app/src/main/res/menu/edit_tool_bar_menu.xml
+++ b/app/src/main/res/menu/edit_tool_bar_menu.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/tb_edit"
-        android:title="수정"
+        android:title="@string/edit"
         app:showAsAction="ifRoom"/>
 </menu>
